# timetracker

./: install.sh  receiver.py  timetracker.py  timetracker.service  tracker.js
package/: CMakeLists.txt  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: AppUsageList.qml  main.qml
package/tracker/: db.py  env.py  service.py  tracker.js
tracker/: db.py  env.py  service.py
